--- a/minima.html
+++ b/minima.html
@@ -1,89 +1,89 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<title>Open Standard Media (OSM) Player</title>
-		<script type="text/javascript" src="jquery-ui/js/jquery.js"></script>
-		<script type="text/javascript" src="js/jquery.osmplayer.compressed.js"></script>
-		<script type="text/javascript" src="templates/default/jquery.media.template.default.compressed.js"></script>
-		<script type="text/javascript" src="templates/default/jquery.media.ready.js"></script>
-		<script type="text/javascript" src="templates/default/jquery.validate.js"></script>
-		<link rel="stylesheet" type="text/css" href="css/player.css" />
-		<!--[if IE]><link rel="stylesheet" type="text/css" href="css/player_ie.css" /><![endif]-->
-		<script type="text/javascript">
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />		<title>Open Standard Media (OSM) Player</title>
+        <script type="text/javascript" src="jquery-ui/js/jquery.js"></script>
+        <script type="text/javascript" src="js/jquery.osmplayer.compressed.js"></script>
+        <script type="text/javascript" src="templates/default/jquery.media.template.default.compressed.js"></script>
+        <script type="text/javascript" src="templates/default/jquery.media.ready.js"></script>
+        <script type="text/javascript" src="templates/default/jquery.validate.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/player.css" />
+        <!--[if IE]><link rel="stylesheet" type="text/css" href="css/player_ie.css" /><![endif]-->
+        <script type="text/javascript">
 
-		$(document).ready(function() {
-			$('#formulaire').validate();
+            $(document).ready(function() {
+                    $('#formulaire').validate();
 
 
-			$("#formulaire").submit(function(){
-				var xhrObj=null;
-				if(window.XMLHttpRequest)
-					xhrObj=new XMLHttpRequest();//Firefox
-				else
-					if(window.ActiveXObject)
-						xhrObj=new ActiveXObject("Microsoft.XMLHTTP");//Internet Explorer
-					else{//XMLHttpRequest non supporté par le navigateur
-						alert("Votre navigateur ne supporte pas les objets XMLHTTPRequest...");
-						return;
-					}
-				xhrObj.open("POST","serveur.php",true);
-				xhrObj.onreadystatechange=function(){
-					if(xhrObj.readyState==4){
-						alert(xhrObj.responseText);
-					}
-				}
-				xhrObj.setRequestHeader("Content-type","application/x-www-form-urlencoded");
-				f=document.getElementById('formulaire');
-				var data="donnee="+f.debut.value+f.fin.value+f.subtitle.value;
+                    $("#formulaire").submit(function(){
+                        var xhrObj=null;
+                        if(window.XMLHttpRequest)
+                        xhrObj=new XMLHttpRequest();//Firefox
+                        else
+                        if(window.ActiveXObject)
+                        xhrObj=new ActiveXObject("Microsoft.XMLHTTP");//Internet Explorer
+                        else{//XMLHttpRequest non supporté par le navigateur
+                        alert("Votre navigateur ne supporte pas les objets XMLHTTPRequest...");
+                        return;
+                        }
+                        xhrObj.open("POST","serveur.php",true);
+                        xhrObj.onreadystatechange=function(){
+                        if(xhrObj.readyState==4){
+                        alert(xhrObj.responseText);
+                        }
+                        }
+                        xhrObj.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+                        f=document.getElementById('formulaire');
+                        var data="donnee="+f.debut.value+f.fin.value+f.subtitle.value;
 
-			});
+                    });
 
-	});
-				/*	$.ajax({
-						   //type :"POST",
-						   //target : '',
-						   url : 'submit.html',
-							//async :false
-							success : function(data){
-								$.('.result').html(data);
-								alert('Load  ,...');
-							}
-						});
+            });
+/*	$.ajax({
+//type :"POST",
+//target : '',
+url : 'submit.html',
+//async :false
+success : function(data){
+$.('.result').html(data);
+alert('Load  ,...');
+}
+});
 
-					<!--var player = $("#player").mediaplayer({
-					showPlaylist:false,
-					file:"../videos/5_SG.flv",
-					image:"videos/urbilog.png",
-					prefix:"player_",
-					ids: {
-						loading:"#player_mediaplayerloading",
-						player:"#player_mediaplayer",
-						titleBar:"#player_mediatitlebar",
-						node:"#player_medianode",
-						currentTime:"#player_mediacurrenttime",
-						totalTime:"#player_mediatotaltime",
-						playPause:"#player_mediaplaypause",
-						seekUpdate:"#player_mediaseekupdate",
-						seekProgress:"#player_mediaseekprogress",
-						seekBar:"#player_mediaseekbar",
-						seekHandle:"#player_mediaseekhandle",
-						volumeUpdate:"#player_mediavolumeupdate",
-						volumeBar:"#player_mediavolumebar",
-						volumeHandle:"#player_mediavolumehandle",
-						mute:"#player_mediamute",
-						busy:"#player_mediabusy",
-						preview:"#player_mediapreview",
-						play:"#player_mediaplay",
-						media:"#player_mediadisplay",
-						control:"#player_mediacontrol",
-						mediaRegion:"#player_mediaregion"
-					}
-				});
-				$("#player_loading").hide();
-			});
-			-->*/
-		</script>
-	</head>
+<!--var player = $("#player").mediaplayer({
+showPlaylist:false,
+file:"../videos/5_SG.flv",
+image:"videos/urbilog.png",
+prefix:"player_",
+ids: {
+loading:"#player_mediaplayerloading",
+player:"#player_mediaplayer",
+titleBar:"#player_mediatitlebar",
+node:"#player_medianode",
+currentTime:"#player_mediacurrenttime",
+totalTime:"#player_mediatotaltime",
+playPause:"#player_mediaplaypause",
+seekUpdate:"#player_mediaseekupdate",
+seekProgress:"#player_mediaseekprogress",
+seekBar:"#player_mediaseekbar",
+seekHandle:"#player_mediaseekhandle",
+volumeUpdate:"#player_mediavolumeupdate",
+volumeBar:"#player_mediavolumebar",
+volumeHandle:"#player_mediavolumehandle",
+mute:"#player_mediamute",
+busy:"#player_mediabusy",
+preview:"#player_mediapreview",
+play:"#player_mediaplay",
+media:"#player_mediadisplay",
+control:"#player_mediacontrol",
+mediaRegion:"#player_mediaregion"
+}
+});
+$("#player_loading").hide();
+});
+-->*/
+</script>
+  </head>
   <body>
       <h2>Open Standard Media (OSM) Player</h2>
       <div id="player_mediaplayerloading" style="width:550px;height:400px;">
