--- a/minima.html
+++ b/minima.html
@@ -121,5 +121,8 @@
                 </div>
             </div>
         </div>
+        <div class="help">
+            <span>Cliquer sur play/pause pour commencer un nouveau sous-titre, cliquer de nouveau sur play/pause pour déterminer la duréee d'affichage de votre sous-titre, laisser le champ sous vivre vide, si vous n'en voulais pas, ou que vous vous êtes trompé.</span>
+        </div>
     </body>
 </html>
