Correction de l'orthographe

--- a/minima.html
+++ b/minima.html
@@ -122,7 +122,7 @@
             </div>
         </div>
         <div class="help">
-            <span>Cliquer sur play/pause pour commencer un nouveau sous-titre, cliquer de nouveau sur play/pause pour déterminer la duréee d'affichage de votre sous-titre, laisser le champ sous vivre vide, si vous n'en voulais pas, ou que vous vous êtes trompé.</span>
+            <span>Cliquer sur play/pause pour commencer un nouveau sous-titre, cliquer de nouveau sur play/pause pour déterminer la durée d'affichage de votre sous-titre, laisser le champ sous-tivre vide, si vous n'en voulez pas, ou que vous vous êtes trompé.</span>
         </div>
     </body>
 </html>
