le php upload il est correct mais ne fait encore ien

--- a/minima.html
+++ b/minima.html
@@ -27,10 +27,11 @@
       <div id="player_mediatitlebar" class="player_ui-widget-header player_ui-corner-top player_ui-helper-clearfix">
         <div id="player_mediatitlelinks">
           <div id="player_mediatitlelinksinner">
-
-            <a href="#maximize" id="player_mediamaxbutton" class="player_ui-state-default player_ui-corner-all">
+<!--
+			<input type="file" name = "upload"></input>
+-->            <a href="#maximize" id="player_mediamaxbutton" class="player_ui-state-default player_ui-corner-all">
 				<span class="player_ui-icon player_ui-icon-arrow-4-diag"></span>
-				</a>
+			</a>			
           </div>
         </div>
       </div>
