--- a/minima.html
+++ b/minima.html
@@ -1,96 +1,180 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />		<title>Media Player Urbilog</title>
-    <script type="text/javascript" src="jquery-ui/js/jquery.js"></script>
-    <script type="text/javascript" src="js/jquery.osmplayer.compressed.js"></script>
-    <script type="text/javascript" src="templates/default/jquery.media.template.default.compressed.js"></script>
-    <script type="text/javascript" src="templates/default/jquery.media.ready.js"></script>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <title>Media Player Urbilog</title>
+        <script type="text/javascript" src="jquery-ui/js/jquery.js"></script>
+        <script type="text/javascript" src="js/jquery.osmplayer.compressed.js"></script>
+        <script type="text/javascript" src="templates/default/jquery.media.template.default.compressed.js"></script>
+        <script type="text/javascript" src="templates/default/jquery.media.ready.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="css/player.css" />
-	<script type="text/javascript">
-		  $(function() {
-			$("#mediaplayer").mediaplayer({
+        <link rel="stylesheet" type="text/css" href="jquery-ui/css/dark-hive/jquery-ui-1.8rc1.custom.css" />
+        <link rel="stylesheet" type="text/css" href="templates/default/osmplayer_default.css" />
 
-			  playlist: "playlist.xml"
-			});
-		  });
-	</script>
-  </head>
-  <body>
-    <h2> Media Player Urbilog</h2>
-    <div id="player_mediaplayerloading" style="width:550px;height:400px;">
-      <img src="templates/default/images/busy.gif" />
-    </div>
-    <div id="player" class="player_mediashowtitle player_mediaplayerdialog player_ui-dialog player_ui-widget player_ui-widget-content player_ui-corner-all" style="width:550px;height:400px;">
-      <div id="player_mediatitlebar" class="player_ui-widget-header player_ui-corner-top player_ui-helper-clearfix">
-        <div id="player_mediatitlelinks">
-          <div id="player_mediatitlelinksinner">
+    </head>
+    <body>
+        <h2>Open Standard Media (OSM) Player</h2><br/>
+        <div id="playerloading" style="width:550px;height:400px;">
+            <img src="templates/default/images/busy.gif" />
+        </div>
+        <div id="player" class="mediashowplaylist mediashowtitle playerdialog ui-dialog ui-widget ui-widget-content ui-corner-all" style="width:550px;height:400px;">
+            <div id="mediatitlebar" class="ui-widget-header ui-corner-top ui-helper-clearfix">
+                <div id="mediatitlelinks">
+                    <div id="mediatitlelinksinner">
+                        <a href="#fullscreen" id="mediafullbutton" class="ui-state-default ui-corner-all"><span class="ui-icon ui-icon-extlink"></span></a>
+                        <a href="#maximize" id="mediamaxbutton" class="ui-state-default ui-corner-all"><span class="ui-icon ui-icon-arrow-4-diag"></span></a>
+                        <a href="#menu" id="mediamenubutton" class="ui-state-default ui-corner-all"><span class="ui-icon ui-icon-info"></span></a>
+                    </div>
+                </div>
+            </div>
+            <div id="player" class="ui-helper-clearfix">
+                <div id="mediamenu" class="ui-tabs ui-widget ui-widget-content ui-corner-all" id="tabs">
+                    <div id="mediamenuclose">
+                        <span class="ui-icon ui-icon-circle-close"></span>
+                    </div>
+                    <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
+                        <li class="ui-state-default ui-corner-top ui-tabs-selected ui-state-active"><a href="#mediaembed">embed</a></li>
+                        <li class="ui-state-default ui-corner-top"><a href="#mediaelink">link</a></li>
+                        <li class="ui-state-default ui-corner-top"><a href="#mediainfo">info</a></li>
+                    </ul>
+                    <div id="mediaembed" class="menucontent ui-tabs-panel ui-widget-content ui-corner-bottom" id="mediaembed">
+                        <div id="mediaembedForm" name="mediaembedForm">
+                            <label for="mediaembedCode">Embed</label>
+                            <input id="mediaembedCode" name="mediaembedCode" type="text" value="" readonly />
+                        </div>
+                    </div>
+                    <div id="mediaelink" class="menucontent ui-tabs-panel ui-widget-content ui-corner-bottom" id="mediaelink">
+                        <div id="mediaelinkForm" name="mediaelinkForm">
+                            <label for="mediaelinkCode">URL</label>
+                            <input id="mediaelinkCode" name="mediaelinkCode" type="text" value="" readonly />
+                        </div>
+                    </div>
+                    <div id="mediainfo" class="menucontent ui-tabs-panel ui-widget-content ui-corner-bottom" id="mediainfo">
+                        <p>
+                        <a target="_blank" href="http://www.mediafront.org">Open Standard Media Player</a> version 0.01<br/><br/>
+                        Built by <a target="_blank" href="http://www.alethia-inc.com">Alethia Inc.</a>
+                        </p>
+                    </div>
+                </div>
+                <div id="medianode">
+                    <div id="mediaregion">
+                        <div id="mediabusy"><img src="templates/default/images/busy.gif" /></div>
+                        <div id="mediaplay"><img src="templates/default/images/play.png" /></div>
+                        <div id="mediapreview"></div>
+                        <div id="mediadisplay"></div>
+                    </div>
+                </div>
+                <div id="mediacontrol" class="ui-widget-header ui-corner-bottom">
+                    <div id="mediacontrolleft">
+                        <div id="mediaplaypause" class="ui-state-default ui-corner-all">
+                            <div class="on">
+                                <span class="ui-icon ui-icon-play"></span>
+                            </div>
+                            <div class="off" style="display:none">
+                                <span class="ui-icon ui-icon-pause"></span>
+                            </div>
+                        </div>
+                        <div id="mediacurrenttime">00:00</div>
+                    </div>
+                    <div id="mediacontrolright">
+                        <div id="mediatotaltime">00:00</div>
+                        <div id="mediamute" class="ui-state-default ui-corner-all">
+                            <div class="on" style="display:none">
+                                <span class="ui-icon ui-icon-volume-off"></span>
+                            </div>
+                            <div class="off">
+                                <span class="ui-icon ui-icon-volume-on"></span>
+                            </div>
+                        </div>
+                        <div id="mediavolumebar">
+                            <div id="mediavolume" class="ui-state-default">
+                                <div id="mediavolumeupdate">
+                                    <div id="mediavolumehandle">
+                                        <span class="ui-icon ui-icon-triangle-1-s"></span>
+                                    </div>
+                                    <div class="ui-state-active"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="mediacontrolcenter">
+                        <div id="mediaseekbar">
+                            <div id="mediaseek" class="ui-state-default">
+                                <div id="mediaseekupdate">
+                                    <div id="mediaseekhandle">
+                                        <span class="ui-icon ui-icon-triangle-1-s"></span>
+                                    </div>
+                                    <div class="ui-state-active"></div>
+                                </div>
+                                <div id="mediaseekprogress"><div class="ui-state-hover"></div></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-            <a href="#maximize" id="player_mediamaxbutton" class="player_ui-state-default player_ui-corner-all">
-				<span class="player_ui-icon player_ui-icon-arrow-4-diag"></span>
-				</a>
-          </div>
+            <div id="mediaplaylist">
+                <div id="mediascrollwrapper">
+                    <div id="mediabusy" class="ui-state-default ui-state-disabled">
+                        <img src="templates/default/images/busy.gif" />
+                    </div>
+                    <div id="mediascroll" class="ui-helper-clearfix">
+                        <div id="mediascrollbarwrapper">
+                            <div id="mediascrollup" class="ui-state-default">
+                                <span class="ui-icon ui-icon-triangle-1-n"></span>
+                            </div>
+                            <div id="mediascrollbar">
+                                <div id="mediascrolltrack" class="ui-widget-content">
+                                    <div id="mediascrollhandle" class="ui-state-default">
+                                        <span class="ui-icon ui-icon-grip-dotted-horizontal"></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="mediascrolldown" class="ui-state-default">
+                                <span class="ui-icon ui-icon-triangle-1-s"></span>
+                            </div>
+                        </div>
+                        <div id="medialistmask">
+                            <div id="medialist">
+                                <div id="mediateaser" class="ui-state-default">
+                                    <div id="mediaimage" class="mediafield ui-widget-content" type="image" field="thumbnail">
+                                    </div>
+                                    <div id="mediatitle" class="mediafield ui-helper-clearfix" type="text" field="title">Sample Title
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="mediapager" class="ui-widget-header ui-corner-bottom">
+                    <div id="mediapagerleft">
+                        <div id="mediaprevpage" class="mediapagerlink ui-state-default ui-corner-all">
+                            <span class="ui-icon ui-icon-seek-prev"></span>
+                        </div>
+                        <div id="medialoadprev" class="mediapagerlink ui-state-default ui-corner-all">
+                            <span class="ui-icon ui-icon-triangle-1-w"></span>
+                        </div>
+                        <div id="mediaprev" class="mediapagerlink ui-state-default ui-corner-all">
+                            <span class="ui-icon ui-icon-carat-1-w"></span>
+                        </div>
+                    </div>
+                    <div id="mediapagerright">
+                        <div id="medianext" class="mediapagerlink ui-state-default ui-corner-all">
+                            <span class="ui-icon ui-icon-carat-1-e"></span>
+                        </div>
+                        <div id="medialoadnext" class="mediapagerlink ui-state-default ui-corner-all">
+                            <span class="ui-icon ui-icon-triangle-1-e"></span>
+                        </div>
+                        <div id="medianextpage" class="mediapagerlink ui-state-default ui-corner-all">
+                            <span class="ui-icon ui-icon-seek-next"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div id="player_mediaplayer" class="player_ui-helper-clearfix">
-        <div id="player_medianode">
-          <div id="player_mediaregion">
-			<div id="player_mediabusy">
-			  <img src="templates/default/images/busy.gif" />
-			</div>
-			<div id="player_mediaplay">
-			  <img src="templates/default/images/play.png" />
-			</div>
-			<div id="player_mediapreview"></div>
-			<div id="player_mediadisplay"></div>
-          </div>
+        <div class="help">
+            <br/>
+            <span>Cliquer sur play/pause pour commencer un nouveau sous-titre, cliquer de nouveau sur play/pause pour déterminer la durée d'affichage de votre sous-titre, laisser le champ sous-tivre vide, si vous n'en voulez pas, ou que vous vous êtes trompé.</span>
         </div>
-        <div id="player_mediacontrol" class="player_ui-widget-header player_ui-corner-bottom">
-          <div id="player_mediacontrolleft">
-            <div id="player_mediaplaypause" class="player_ui-state-default player_ui-corner-all">
-              <div class="on">
-                <span class="player_ui-icon player_ui-icon-play"></span>
-              </div>
-              <div class="off" style="display:none">
-                <span class="player_ui-icon player_ui-icon-pause"></span>
-              </div>
-            </div>
-            <div id="player_mediacurrenttime">00:00</div>
-          </div>
-          <div id="player_mediacontrolright">
-            <div id="player_mediatotaltime">00:00</div>
-            <div id="player_mediamute" class="player_ui-state-default player_ui-corner-all">
-              <div class="on" style="display:none">
-                <span class="player_ui-icon player_ui-icon-volume-off"></span>
-              </div>
-              <div class="off">
-                <span class="player_ui-icon player_ui-icon-volume-on"></span>
-              </div>
-            </div>
-            <div id="player_mediavolumebar" class="player_ui-state-default">
-              <div id="player_mediavolumehandle">
-                <span class="player_ui-icon player_ui-icon-bullet"></span>
-              </div>
-              <div id="player_mediavolumeupdate" class="player_ui-state-active"></div>
-            </div>
-          </div>
-          <div id="player_mediacontrolcenter">
-            <div id="player_mediaseekbar" class="player_ui-state-default">
-              <div id="player_mediaseekhandle">
-                <span class="player_ui-icon player_ui-icon-bullet"></span>
-              </div>
-              <div id="player_mediaseekupdate" class="player_ui-state-active"></div>
-              <div id="player_mediaseekprogress" class="player_ui-state-hover"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-      
-    </div>
-    <div class="help">
-      <br/>
-      <span>Cliquer sur play/pause pour commencer un nouveau sous-titre, cliquer de nouveau sur play/pause pour déterminer la durée d'affichage de votre sous-titre, laisser le champ sous-tivre vide, si vous n'en voulez pas, ou que vous vous êtes trompé.</span>
-    </div>
-  </body>
+    </body>
 </html>
