--- a/minima.html
+++ b/minima.html
@@ -4,7 +4,9 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>Media Player Urbilog</title>
         <script type="text/javascript" src="jquery-ui/js/jquery.js"></script>
+<!--
         <script type="text/javascript" src="js/jquery.osmplayer.compressed.js"></script>
+-->
         <script type="text/javascript" src="templates/default/jquery.media.template.default.compressed.js"></script>
         <script type="text/javascript" src="templates/default/jquery.media.ready.js"></script>
 
@@ -13,7 +15,7 @@
 
     </head>
     <body>
-        <h2>Open Standard Media (OSM) Player</h2><br/>
+        <h2>URBILOG Media Player</h2><br/>
         <div id="playerloading" style="width:550px;height:400px;">
             <img src="templates/default/images/busy.gif" />
         </div>
@@ -21,9 +23,13 @@
             <div id="mediatitlebar" class="ui-widget-header ui-corner-top ui-helper-clearfix">
                 <div id="mediatitlelinks">
                     <div id="mediatitlelinksinner">
+<!--
                         <a href="#fullscreen" id="mediafullbutton" class="ui-state-default ui-corner-all"><span class="ui-icon ui-icon-extlink"></span></a>
+-->
                         <a href="#maximize" id="mediamaxbutton" class="ui-state-default ui-corner-all"><span class="ui-icon ui-icon-arrow-4-diag"></span></a>
+<!--
                         <a href="#menu" id="mediamenubutton" class="ui-state-default ui-corner-all"><span class="ui-icon ui-icon-info"></span></a>
+-->
                     </div>
                 </div>
             </div>
@@ -51,7 +57,7 @@
                     </div>
                     <div id="mediainfo" class="menucontent ui-tabs-panel ui-widget-content ui-corner-bottom" id="mediainfo">
                         <p>
-                        <a target="_blank" href="http://www.mediafront.org">Open Standard Media Player</a> version 0.01<br/><br/>
+                        <a target="_blank" href="http://www.mediafront.org">URBILOG Media Player</a> version 0.01<br/><br/>
                         Built by <a target="_blank" href="http://www.alethia-inc.com">Alethia Inc.</a>
                         </p>
                     </div>
