modif sur minima.html qui ne font rien

--- a/minima.html
+++ b/minima.html
@@ -7,7 +7,43 @@
 <!--
         <script type="text/javascript" src="js/jquery.osmplayer.compressed.js"></script>
 -->
+ 
+        <script type="text/javascript" src="js/source/jquery.media.drupal.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.parser.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.auto.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.rpc.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.json.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.sha256.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.utils.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.control.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.flash.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.html5.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.image.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.link.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.links.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.display.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.minplayer.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.menu.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.node.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.pager.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.player.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.playlist.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.playlistlink.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.rotator.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.slider.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.teaser.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.titlebar.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.scroll.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.voter.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.youtube.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.vimeo.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.dailymotion.js?P"></script>
+		<script type="text/javascript" src="js/source/jquery.media.file.js?P"></script>
+			
+<!--
         <script type="text/javascript" src="templates/default/jquery.media.template.default.compressed.js"></script>
+-->
+
         <script type="text/javascript" src="templates/default/jquery.media.ready.js"></script>
 
         <link rel="stylesheet" type="text/css" href="jquery-ui/css/dark-hive/jquery-ui-1.8rc1.custom.css" />
