arrrrrfff prise de tete

--- a/minima.html
+++ b/minima.html
@@ -53,43 +53,47 @@
         <div id="playerloading" style="width:550px;height:400px;">
             <img src="templates/default/images/busy.gif" />
         </div>
-        <div id="player" class="mediashowplaylist mediashowtitle playerdialog ui-dialog ui-widget ui-widget-content ui-corner-all" style="width:550px;height:400px;">
+        <div id="playerP" class="mediashowplaylist mediashowtitle playerdialog ui-dialog ui-widget ui-widget-content ui-corner-all" style="width:550px;height:400px;">
             <div id="mediatitlebar" class="ui-widget-header ui-corner-top ui-helper-clearfix">
                 <div id="mediatitlelinks">
                     <div id="mediatitlelinksinner">
-<!--
-                        <a href="#fullscreen" id="mediafullbutton" class="ui-state-default ui-corner-all"><span class="ui-icon ui-icon-extlink"></span></a>
--->
-                        <a href="#maximize" id="mediamaxbutton" class="ui-state-default ui-corner-all"><span class="ui-icon ui-icon-arrow-4-diag"></span></a>
-<!--
-                        <a href="#menu" id="mediamenubutton" class="ui-state-default ui-corner-all"><span class="ui-icon ui-icon-info"></span></a>
--->
+                        <a href="#maximize" id="mediamaxbutton" class="ui-state-default ui-corner-all">
+							<span class="ui-icon ui-icon-arrow-4-diag"></span>
+						</a>
+
                     </div>
                 </div>
             </div>
             <div id="player" class="ui-helper-clearfix">
+<!--
                 <div id="mediamenu" class="ui-tabs ui-widget ui-widget-content ui-corner-all" id="tabs">
+-->
+<!--
                     <div id="mediamenuclose">
                         <span class="ui-icon ui-icon-circle-close"></span>
                     </div>
-                    <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
-                        <li class="ui-state-default ui-corner-top ui-tabs-selected ui-state-active"><a href="#mediaembed">embed</a></li>
-                        <li class="ui-state-default ui-corner-top"><a href="#mediaelink">link</a></li>
-                        <li class="ui-state-default ui-corner-top"><a href="#mediainfo">info</a></li>
-                    </ul>
+-->
+
+<!--
                     <div id="mediaembed" class="menucontent ui-tabs-panel ui-widget-content ui-corner-bottom" id="mediaembed">
                         <div id="mediaembedForm" name="mediaembedForm">
                             <label for="mediaembedCode">Embed</label>
                             <input id="mediaembedCode" name="mediaembedCode" type="text" value="" readonly />
                         </div>
                     </div>
+-->
+
+<!--
                     <div id="mediaelink" class="menucontent ui-tabs-panel ui-widget-content ui-corner-bottom" id="mediaelink">
                         <div id="mediaelinkForm" name="mediaelinkForm">
                             <label for="mediaelinkCode">URL</label>
                             <input id="mediaelinkCode" name="mediaelinkCode" type="text" value="" readonly />
                         </div>
                     </div>
+-->
+<!--
                 </div>
+-->
                 <div id="medianode">
                     <div id="mediaregion">
                         <div id="mediabusy"><img src="templates/default/images/busy.gif" /></div>
