jquery qui me casse la tete

--- a/minima.html
+++ b/minima.html
@@ -48,7 +48,7 @@
 
     </head>
     <body>
-        <h2>URBILOG Media Player</h2><br/>
+        <h2>URBILOG Media Player</h2>
         <div id="playerloading" style="width:550px;height:400px;">
             <img src="templates/default/images/busy.gif" />
         </div>
