voir des modif a faire

--- a/minima.html
+++ b/minima.html
@@ -177,6 +177,10 @@
                 </div>
             </div>
         </div>
+        <form id="subtitle" method ="POST" action="generate_xml.php" enctype="multipart/form-data">
+			<input  value="Envoyer" type="submit">
+        </form>
+        
         <div class="help">
             <br/>
             <span>Cliquer sur play/pause pour commencer un nouveau sous-titre, cliquer de nouveau sur play/pause pour déterminer la durée d'affichage de votre sous-titre, laisser le champ sous-tivre vide, si vous n'en voulez pas, ou que vous vous êtes trompé.</span>
